--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,2 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; 
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /
-}
+@import "tailwindcss";
 
-body {
-  background-color: #FDFDFD; 
-  color: #333; 
-}
